--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "framer-motion": "^11.5.4",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
