--- a/components.json
+++ b/components.json
@@ -12,11 +12,11 @@
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "@/components",
+    "components": "@/component",
     "utils": "@/lib/utils",
-    "ui": "@/components/ui",
+    "ui": "@/component/ui",
     "lib": "@/lib",
-    "hooks": "@/hooks"
+    "hooks": "@/hook"
   },
   "registries": {}
 }
