added top side asci logo of my landing page

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "19.1.0",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.181.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
